tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__number_line_plot__image_size_option.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"NumberLinePlot[{1, 2, 3}, ImageSize -> 200]\")"
---
<svg width="200" height="60" viewBox="0 0 2000 600" xmlns="http://www.w3.org/2000/svg">
<rect width="2000" height="600" fill="#ffffff"/>
<line x1="600.0" y1="300.0" x2="1800.0" y2="300.0" stroke="#666666" stroke-width="10"/>
<circle cx="682.8" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1200.0" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1717.2" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<line x1="631.0" y1="300.0" x2="631.0" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="734.5" y1="300.0" x2="734.5" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="786.2" y1="300.0" x2="786.2" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="837.9" y1="300.0" x2="837.9" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="889.7" y1="300.0" x2="889.7" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="993.1" y1="300.0" x2="993.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1044.8" y1="300.0" x2="1044.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1096.6" y1="300.0" x2="1096.6" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1148.3" y1="300.0" x2="1148.3" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1251.7" y1="300.0" x2="1251.7" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1303.4" y1="300.0" x2="1303.4" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1355.2" y1="300.0" x2="1355.2" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1406.9" y1="300.0" x2="1406.9" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1510.3" y1="300.0" x2="1510.3" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1562.1" y1="300.0" x2="1562.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1613.8" y1="300.0" x2="1613.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1665.5" y1="300.0" x2="1665.5" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1769.0" y1="300.0" x2="1769.0" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="682.8" y1="300.0" x2="682.8" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="682.8" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">1</text>
<line x1="941.4" y1="300.0" x2="941.4" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="941.4" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">1.5</text>
<line x1="1200.0" y1="300.0" x2="1200.0" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="1200.0" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">2</text>
<line x1="1458.6" y1="300.0" x2="1458.6" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="1458.6" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">2.5</text>
<line x1="1717.2" y1="300.0" x2="1717.2" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="1717.2" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">3</text>
</svg>
