tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__number_line_plot__multiple_series.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"NumberLinePlot[{Range[20], 2*Range[10], 3*Range[6], 5*Range[4], 7*Range[2]}]\")"
---
<svg width="360" height="145" viewBox="0 0 3600 1450" xmlns="http://www.w3.org/2000/svg">
<rect width="3600" height="1450" fill="#ffffff"/>
<line x1="600.0" y1="1150.0" x2="3400.0" y2="1150.0" stroke="#666666" stroke-width="10"/>
<circle cx="793.1" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="920.1" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1047.2" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1174.2" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1301.3" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1428.3" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1555.4" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1682.4" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1809.4" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1936.5" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2063.5" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2190.6" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2317.6" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2444.6" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2571.7" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2698.7" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2825.8" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2952.8" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="3079.9" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="3206.9" cy="983.3" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="920.1" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="1174.2" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="1428.3" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="1682.4" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="1936.5" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="2190.6" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="2444.6" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="2698.7" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="2952.8" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="3206.9" cy="816.7" r="40.0" fill="rgb(224,147,44)"/>
<circle cx="1047.2" cy="650.0" r="40.0" fill="rgb(143,176,50)"/>
<circle cx="1428.3" cy="650.0" r="40.0" fill="rgb(143,176,50)"/>
<circle cx="1809.4" cy="650.0" r="40.0" fill="rgb(143,176,50)"/>
<circle cx="2190.6" cy="650.0" r="40.0" fill="rgb(143,176,50)"/>
<circle cx="2571.7" cy="650.0" r="40.0" fill="rgb(143,176,50)"/>
<circle cx="2952.8" cy="650.0" r="40.0" fill="rgb(143,176,50)"/>
<circle cx="1301.3" cy="483.3" r="40.0" fill="rgb(217,81,25)"/>
<circle cx="1936.5" cy="483.3" r="40.0" fill="rgb(217,81,25)"/>
<circle cx="2571.7" cy="483.3" r="40.0" fill="rgb(217,81,25)"/>
<circle cx="3206.9" cy="483.3" r="40.0" fill="rgb(217,81,25)"/>
<circle cx="1555.4" cy="316.7" r="40.0" fill="rgb(107,72,157)"/>
<circle cx="2444.6" cy="316.7" r="40.0" fill="rgb(107,72,157)"/>
<line x1="793.1" y1="1150.0" x2="793.1" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="920.1" y1="1150.0" x2="920.1" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="1047.2" y1="1150.0" x2="1047.2" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="1174.2" y1="1150.0" x2="1174.2" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="1428.3" y1="1150.0" x2="1428.3" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="1555.4" y1="1150.0" x2="1555.4" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="1682.4" y1="1150.0" x2="1682.4" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="1809.4" y1="1150.0" x2="1809.4" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2063.5" y1="1150.0" x2="2063.5" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2190.6" y1="1150.0" x2="2190.6" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2317.6" y1="1150.0" x2="2317.6" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2444.6" y1="1150.0" x2="2444.6" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2698.7" y1="1150.0" x2="2698.7" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2825.8" y1="1150.0" x2="2825.8" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="2952.8" y1="1150.0" x2="2952.8" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="3079.9" y1="1150.0" x2="3079.9" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="3333.9" y1="1150.0" x2="3333.9" y2="1180.0" stroke="#666666" stroke-width="5"/>
<line x1="666.1" y1="1150.0" x2="666.1" y2="1200.0" stroke="#666666" stroke-width="10"/>
<text x="666.1" y="1354.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">0</text>
<line x1="1301.3" y1="1150.0" x2="1301.3" y2="1200.0" stroke="#666666" stroke-width="10"/>
<text x="1301.3" y="1354.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">5</text>
<line x1="1936.5" y1="1150.0" x2="1936.5" y2="1200.0" stroke="#666666" stroke-width="10"/>
<text x="1936.5" y="1354.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">10</text>
<line x1="2571.7" y1="1150.0" x2="2571.7" y2="1200.0" stroke="#666666" stroke-width="10"/>
<text x="2571.7" y="1354.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">15</text>
<line x1="3206.9" y1="1150.0" x2="3206.9" y2="1200.0" stroke="#666666" stroke-width="10"/>
<text x="3206.9" y="1354.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">20</text>
</svg>
