tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__number_line_plot__predicate_with_range.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"NumberLinePlot[Sin[x] < Cos[x], {x, 0, 2*Pi}]\")"
---
<svg width="360" height="60" viewBox="0 0 3600 600" xmlns="http://www.w3.org/2000/svg">
<rect width="3600" height="600" fill="#ffffff"/>
<line x1="600.0" y1="300.0" x2="3400.0" y2="300.0" stroke="#666666" stroke-width="10"/>
<rect x="600.0" y="210.0" width="494.8" height="30.0" fill="rgb(94,129,181)"/>
<polygon points="500.0,225.0 600.0,175.0 600.0,275.0" fill="rgb(94,129,181)"/>
<circle cx="1094.8" cy="225.0" r="35.0" fill="rgb(94,129,181)"/>
<rect x="2301.7" y="210.0" width="1098.3" height="30.0" fill="rgb(94,129,181)"/>
<circle cx="2301.7" cy="225.0" r="35.0" fill="rgb(94,129,181)"/>
<polygon points="3500.0,225.0 3400.0,175.0 3400.0,275.0" fill="rgb(94,129,181)"/>
<line x1="639.4" y1="300.0" x2="639.4" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="946.8" y1="300.0" x2="946.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1100.4" y1="300.0" x2="1100.4" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1254.1" y1="300.0" x2="1254.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1407.8" y1="300.0" x2="1407.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1715.1" y1="300.0" x2="1715.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1868.8" y1="300.0" x2="1868.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2022.4" y1="300.0" x2="2022.4" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2176.1" y1="300.0" x2="2176.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2483.4" y1="300.0" x2="2483.4" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2637.1" y1="300.0" x2="2637.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2790.8" y1="300.0" x2="2790.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2944.4" y1="300.0" x2="2944.4" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="3251.8" y1="300.0" x2="3251.8" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="793.1" y1="300.0" x2="793.1" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="793.1" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">0</text>
<line x1="1561.4" y1="300.0" x2="1561.4" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="1561.4" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">2</text>
<line x1="2329.8" y1="300.0" x2="2329.8" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="2329.8" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">4</text>
<line x1="3098.1" y1="300.0" x2="3098.1" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="3098.1" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">6</text>
</svg>
