tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__number_line_plot__prime_numbers.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"NumberLinePlot[Prime[Range[10]]]\")"
---
<svg width="360" height="60" viewBox="0 0 3600 600" xmlns="http://www.w3.org/2000/svg">
<rect width="3600" height="600" fill="#ffffff"/>
<line x1="600.0" y1="300.0" x2="3400.0" y2="300.0" stroke="#666666" stroke-width="10"/>
<circle cx="793.1" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="882.5" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1061.3" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1240.1" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1597.7" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="1776.5" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2134.1" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2312.9" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="2670.5" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<circle cx="3206.9" cy="225.0" r="40.0" fill="rgb(94,129,181)"/>
<line x1="793.1" y1="300.0" x2="793.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="971.9" y1="300.0" x2="971.9" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1150.7" y1="300.0" x2="1150.7" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1329.5" y1="300.0" x2="1329.5" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1687.1" y1="300.0" x2="1687.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="1865.9" y1="300.0" x2="1865.9" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2044.7" y1="300.0" x2="2044.7" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2223.5" y1="300.0" x2="2223.5" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2581.1" y1="300.0" x2="2581.1" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2759.9" y1="300.0" x2="2759.9" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="2938.7" y1="300.0" x2="2938.7" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="3117.5" y1="300.0" x2="3117.5" y2="330.0" stroke="#666666" stroke-width="5"/>
<line x1="614.3" y1="300.0" x2="614.3" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="614.3" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">0</text>
<line x1="1508.3" y1="300.0" x2="1508.3" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="1508.3" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">10</text>
<line x1="2402.3" y1="300.0" x2="2402.3" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="2402.3" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">20</text>
<line x1="3296.3" y1="300.0" x2="3296.3" y2="350.0" stroke="#666666" stroke-width="10"/>
<text x="3296.3" y="504.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="140" fill="#666">30</text>
</svg>
